Updated to only build libraries and install them into the install space. Updated to point to the latest Suitesparse version (4.5.3)

--- a/package.xml
+++ b/package.xml
@@ -1,14 +1,13 @@
 <package>
   <name>suitesparse</name>
-  <version>4.2.1</version>
+  <version>4.5.3</version>
   <description>suitesparse</description>
-  <maintainer email="davis@cise.ufl.edu">Dr. Tim Davis</maintainer>
+  <author email="davis@cise.ufl.edu">Dr. Tim Davis</author>
+  <maintainer email="kumarsha@cs.cmu.edu">Kumar Shaurya Shankar</maintainer>
 
   <license>LGPLv3 or later</license>
 
   <url type="website">https://www.cise.ufl.edu/research/sparse/SuiteSparse/</url>
-
-  <author>Dr. Tim Davis</author>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>lapack</build_depend>
